optimize: optimize GC parameters in JVM (#4522)